<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:background="#000000">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginTop="75dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:background="#000000">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#000000">

            <TextView
                android:id="@+id/greenFlag"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#000000"
                android:gravity="left"
                android:text="@string/green_flag"
                android:textColor="@android:color/white"
                android:textSize="40sp"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#000000"
                android:gravity="left"
                android:text="@string/n_m_w"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="18sp"
                android:textStyle="bold"></TextView>

        </android.support.v7.widget.LinearLayoutCompat>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            android:gravity="left"
            app:srcCompat="@drawable/green_flag"/>




    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_margin="50dp"
        android:gravity="center_vertical|center_horizontal">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:gravity="left"
            android:text="@string/first_desc"
            android:textColor="@android:color/white"
            android:textSize="24sp"></TextView>
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="left">
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tick_mark"
                    android:textColor="@android:color/holo_green_dark"
                    android:layout_marginRight="10dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_li_1"
                    android:textColor="@android:color/white" />


            </android.support.v7.widget.LinearLayoutCompat>
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tick_mark"
                    android:textColor="@android:color/holo_green_dark"
                    android:layout_marginRight="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_li_2"
                    android:textColor="@android:color/white" />


            </android.support.v7.widget.LinearLayoutCompat>
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tick_mark"
                    android:textColor="@android:color/holo_green_dark"
                    android:layout_marginRight="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_li_3"
                    android:textColor="@android:color/white" />


            </android.support.v7.widget.LinearLayoutCompat>


        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="50dp">

        <Button
            android:id="@+id/btnCreateId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_dark"
            android:text="@string/create_account" />

    </android.support.v7.widget.LinearLayoutCompat>




</RelativeLayout>