<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="#000000">

    <android.support.v7.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"

       >
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:paddingTop="5dp"
                android:layout_height="54dp"
                android:src="@drawable/left_arrow"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/create_account"
                android:textColor="@android:color/white"
                android:textSize="32dp" />

        </android.support.v7.widget.LinearLayoutCompat>
        <!--<android.support.v7.widget.LinearLayoutCompat-->
            <!--android:id="@+id/hrLine"-->
            <!--android:layout_height="1dp"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_marginTop="40dp"-->
            <!--android:background="@drawable/bg_border"-->
            <!--/>-->
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/email"
                android:textColor="@android:color/white"
                android:textSize="32dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_border">
                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="wrap_content"
                    android:minWidth="250dp"
                    android:padding="10dp"
                    android:layout_height="wrap_content"
                    android:textColorHint="@android:color/white"
                    android:inputType="text"
                    android:textColor="@android:color/white"
                    android:textSize="32dp" />

                <TextView
                    android:id="@+id/check_mark1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@android:color/holo_green_dark"
                    android:textColorHint="@android:color/white"
                    android:textSize="32dp" />

            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/password"
                android:textColor="@android:color/white"
                android:textSize="32dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_border">
                <EditText android:id="@+id/input_password"
                    android:layout_width="wrap_content"
                    android:minWidth="250dp"
                    android:minHeight="40dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:inputType="textPassword"
                    android:textColorHint="@android:color/white"
                    android:textColor="@android:color/white"
                    />
                <TextView
                    android:id="@+id/check_mark2"
                    android:layout_width="wrap_content"
                    android:padding="10dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="32dp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/repeat_password"
                android:textColor="@android:color/white"
                android:textSize="32dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_border">
                <EditText android:id="@+id/rep_password"
                    android:layout_width="wrap_content"
                    android:minWidth="250dp"
                    android:minHeight="40dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:inputType="textPassword"
                    android:textColorHint="@android:color/white"
                    android:textColor="@android:color/white"
                    />
                <TextView
                    android:id="@+id/check_mark3"
                    android:layout_width="wrap_content"
                    android:padding="10dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:layout_gravity="right"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="32dp" />

            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/passport_instructions"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </android.support.v7.widget.LinearLayoutCompat>
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp">

            <Button
                android:id="@+id/btnSignUpNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_green_dark"
                android:text="@string/next" />

        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>



</ScrollView>
